syntax = "proto3";

package faas.log;

option optimize_for = LITE_RUNTIME;
option cc_enable_arenas = true;

enum FsmRecordType {
    INVALID    = 0;
    NEW_VIEW   = 1;
    GLOBAL_CUT = 2;
}

message NodeProto {
    uint32 id = 1;
    string addr = 2;
}

message NewViewRecordProto {
    uint32 view_id = 1;
    uint32 replicas = 2;
    repeated NodeProto nodes = 3;
}

message GlobalCutRecordProto {
    uint64 start_seqnum = 1;
    uint64 end_seqnum = 2;
    repeated uint32 localid_cuts = 3;
}

message FsmRecordProto {
    uint32 seqnum = 1;
    FsmRecordType type = 2;
    NewViewRecordProto new_view_record = 3;
    GlobalCutRecordProto global_cut_record = 4;
}

message LocalCutMsgProto {
    uint32 view_id = 1;
    uint32 my_node_id = 2;
    repeated uint32 localid_cuts = 3;
}

message FsmRecordsMsgProto {
    repeated FsmRecordProto records = 1;
}
